fixing alignment

--- a/static/styles.css
+++ b/static/styles.css
@@ -11,7 +11,7 @@ main {
     display: flex;
     flex-direction: column;
     text-align: center;
-    justify-content: center;
+    align-items: center;
     
     
 }
@@ -74,7 +74,7 @@ main {
     left: 0;
     right: 0;
     margin-left: auto;
-    margin-right: 0px;
+    margin-right: auto;
     
     
 }
